delete files inside public
added footer and main section

--- a/resources/assets/css/frontend/common/all.scss
+++ b/resources/assets/css/frontend/common/all.scss
@@ -7,7 +7,7 @@
     }
 }
 
-@import "skins/default", "skins/dark", "header";
+@import "skins/default", "skins/dark", "header", "footer";
 
 body, html, a {
     font-family: 'Roboto', sans-serif;
