--- a/resources/assets/css/frontend/common/skins/dark.scss
+++ b/resources/assets/css/frontend/common/skins/dark.scss
@@ -5,4 +5,10 @@
     --dark-header-bg: #333;
     --dark-header-color: var(--dark-text-color);
     --dark-header-color-hover: var(--dark-hover-color);
+
+    --dark-main-bg: #292f33;
+
+    --dark-footer-color: #66757f;
+    --dark-footer-color-hover: #7a8d99;
+
 }
