--- a/resources/assets/css/frontend/common/skins/default.scss
+++ b/resources/assets/css/frontend/common/skins/default.scss
@@ -1,8 +1,14 @@
 :root {
-    --text-color: #333;
+    --text-color: #292f33;
     --hover-color: #3275ff;
 
     --header-bg: transparent;
     --header-color: var(--text-color);
     --header-color-hover: var(--hover-color);
+
+    --main-bg: #f9f9f9;
+
+    --footer-color: #b3bec4;
+    --footer-color-hover: #292f33;
+
 }
