--- a/resources/assets/css/frontend/common/header.scss
+++ b/resources/assets/css/frontend/common/header.scss
@@ -1,41 +1,44 @@
 #header {
-    padding: 32px 0;
+    padding: 52px 0;
     background-color: var(--header-bg);
 
-    .d-inline-block{
+    .d-inline-block {
         width: auto;
     }
 
     .dark & {
         background-color: var(--dark-header-bg);
     }
+}
 
-    .logo {
-        font-family: 'Lexend Exa', sans-serif;
-        font-weight: 400;
-        display: flex;
-        margin-bottom: 0;
-        color: var(--header-color);
-        user-select: none;
-        cursor: pointer;
+.logo {
+    font-family: 'Lexend Exa', sans-serif;
+    font-weight: 400;
+    display: inline-flex;
+    margin-bottom: 0;
+    user-select: none;
+    cursor: pointer;
+    color: var(--header-color);
+    font-size: 14px;
+    text-align: left;
 
-        .dark & {
-            color: var(--dark-header-color);
-        }
-
-        span {
-            display: block;
-            font-size: 14px;
-            letter-spacing: 1px;
-        }
-
-        span:first-child {
-            font-size: 28px;
-            line-height: 28px;
-            margin-right: 8px;
-        }
-
+    .dark & {
+        color: var(--dark-header-color);
     }
+
+    span {
+        display: block;
+        font-size: 1em;
+        letter-spacing: 1px;
+        transition: 0.2s linear;
+    }
+
+    span:first-child {
+        font-size: 2em;
+        line-height: 1em;
+        margin-right: 0.5em;
+    }
+
 }
 
 #header nav ul {
@@ -46,7 +49,7 @@
         display: inline-block;
         padding: 0 30px;
 
-        @media(max-width: 991px){
+        @media(max-width: 991px) {
             & {
                 padding: 0 10px;
             }
