add ipsum images
css for mobile in home

--- a/resources/assets/css/frontend/common/header.scss
+++ b/resources/assets/css/frontend/common/header.scss
@@ -1,6 +1,7 @@
 #header {
     padding: 52px 0;
     background-color: var(--header-bg);
+    user-select: none;
 
     .d-inline-block {
         width: auto;
