--- a/resources/assets/css/frontend/home.scss
+++ b/resources/assets/css/frontend/home.scss
@@ -1,11 +1,49 @@
 @import "common/all";
 
 main {
-    padding: 72px;
+    padding: 72px 0;
     background-color: var(--main-bg);
+    user-select: none;
 
     .dark & {
         background-color: var(--dark-main-bg);
+    }
+
+    img {
+        width: 100%;
+    }
+
+    .container > .row .prefer {
+        margin-top: calc(var(--bs-gutter-x) * 0.5);
+    }
+
+    .container > .row > .col-lg-6 + .col-lg-6 .col-lg-6, .squares .col-lg-6 {
+        margin: calc(var(--bs-gutter-x) * 0.5) 0;
+    }
+
+    .container > .row .col-lg-3 {
+        margin: (calc(var(--bs-gutter-x) * 0.5)) 0;
+    }
+
+    @media (max-width: 991px) {
+
+        .container > .row .row {
+            margin-top: 0;
+        }
+
+        .container > .row > .col-lg-6 + .col-lg-6 .col-lg-6, .squares .col-lg-6, .container > .row .col-lg-3 {
+            margin: auto;
+            margin-top: calc(calc(var(--bs-gutter-x) * 0.5) * 2);
+            margin-bottom: 0;
+        }
+
+        .container > .row > div.col-lg-6 + div.col-lg-6, .container > .row .squares, .container > .row .prefer {
+            margin-top: 0;
+        }
+
+        .container > .row > div.col-lg-6 + div.col-lg-6:last-child {
+            margin-top: calc(calc(var(--bs-gutter-x) * 0.5) * 2);
+        }
     }
 
 }
