--- a/resources/assets/css/frontend/common/skins/dark.scss
+++ b/resources/assets/css/frontend/common/skins/dark.scss
@@ -3,6 +3,7 @@
     --dark-hover-color: #ffeb32;
 
     --dark-header-bg: #333;
+    --dark-header-input-bg: #66757f;
     --dark-header-color: var(--dark-text-color);
     --dark-header-color-hover: var(--dark-hover-color);
 
