--- a/resources/assets/css/frontend/common/skins/default.scss
+++ b/resources/assets/css/frontend/common/skins/default.scss
@@ -3,6 +3,7 @@
     --hover-color: #3275ff;
 
     --header-bg: transparent;
+    --header-input-bg: #f7f7f7;
     --header-color: var(--text-color);
     --header-color-hover: var(--hover-color);
 
@@ -10,5 +11,8 @@
 
     --footer-color: #b3bec4;
     --footer-color-hover: #292f33;
+
+    --card-bg: #ffffff80;
+    --card-color: var(--text-color);
 
 }
