--- a/resources/assets/css/frontend/common/header.scss
+++ b/resources/assets/css/frontend/common/header.scss
@@ -10,6 +10,10 @@
     .dark & {
         background-color: var(--dark-header-bg);
     }
+
+    @media (max-width: 991px) {
+        padding: 32px 0;
+    }
 }
 
 .logo {
@@ -31,7 +35,7 @@
         display: block;
         font-size: 1em;
         letter-spacing: 1px;
-        transition: 0.2s linear;
+        transition: 0.2s color linear;
     }
 
     span:first-child {
@@ -57,7 +61,7 @@
             border-radius: 2px;
             width: 0;
             padding: 0 5px;
-            transition: 0.2s linear;
+            transition: 0.2s opacity linear, 0.2s width linear;
             opacity: 0;
             background-color: var(--header-input-bg);
             height: 32px;
@@ -67,7 +71,7 @@
                 color: var(--dark-header-color);
             }
 
-            .dark &::placeholder{
+            .dark &::placeholder {
                 color: var(--dark-header-color);
             }
 
@@ -109,7 +113,7 @@
 
         a {
             color: var(--header-color);
-            transition: 0.2s linear;
+            transition: 0.2s color linear;
             text-transform: uppercase;
             font-weight: 400;
             font-size: 14px;
@@ -134,6 +138,83 @@
 
             .dark & {
                 color: var(--dark-header-color);
+            }
+        }
+    }
+}
+
+@media (max-width: 991px) {
+    #header {
+        height: 100px;
+
+        nav {
+            width: 100%;
+            position: fixed;
+            left: 0;
+            top: 100px;
+            height: 0;
+            background-color: var(--header-bg);
+            z-index: 10;
+            transition: 0.2s opacity ease-in-out, 0.2s height ease-in-out;
+            overflow: hidden;
+            opacity: 0;
+
+            &.show{
+                height: calc(100% - 100px);
+                opacity: 1;
+            }
+
+            .dark & {
+                background-color: var(--dark-header-bg);
+            }
+
+            ul {
+                display: flex;
+                flex-direction: column;
+            }
+
+            ul li {
+                display: block;
+                width: 100%;
+                flex-basis: 100%;
+                order: 2;
+                margin: 10px 0;
+                text-align: center;
+            }
+
+            ul li:last-child {
+                order: 1;
+            }
+        }
+
+        .col {
+
+            color: var(--header-color);
+            position: relative;
+
+            .dark & {
+                color: var(--dark-header-color);
+            }
+
+            span:last-child {
+                position: absolute;
+                padding: 8px 12px;
+                right: (calc(var(--bs-gutter-x) * 0.5));
+                cursor: pointer;
+
+                &:before {
+                    content: '\f0c9';
+                    font-family: "Font Awesome 6 Free", sans-serif;
+                    font-weight: 700;
+                }
+            }
+
+            .search input{
+                width: 200px;
+                opacity: 1;
+                padding: 5px 5px;
+                margin-right: 10px;
+                margin-left: 20px;
             }
         }
     }
