--- a/resources/assets/css/frontend/common/skins/default.scss
+++ b/resources/assets/css/frontend/common/skins/default.scss
@@ -2,7 +2,7 @@
     --text-color: #292f33;
     --hover-color: #3275ff;
 
-    --header-bg: transparent;
+    --header-bg: #ffffff;
     --header-input-bg: #f7f7f7;
     --header-color: var(--text-color);
     --header-color-hover: var(--hover-color);
