begin single post layout page
added new helper file
added new function for process view result

--- a/resources/assets/css/frontend/common/skins/default.scss
+++ b/resources/assets/css/frontend/common/skins/default.scss
@@ -15,4 +15,9 @@
     --card-bg: #ffffff80;
     --card-color: var(--text-color);
 
+    --article-bg: #fff;
+    --article-color: var(--text-color);
+    --article-a-color: var(--text-color);
+    --article-a-hover-color: #0095ff;
+
 }
