--- a/resources/assets/css/frontend/common/skins/dark.scss
+++ b/resources/assets/css/frontend/common/skins/dark.scss
@@ -2,16 +2,21 @@
     --dark-text-color: #ccd6dd;
     --dark-hover-color: #ffeb32;
 
-    --dark-header-bg: #333;
+    --dark-header-bg: #292f33;
     --dark-header-input-bg: #66757f;
     --dark-header-color: var(--dark-text-color);
     --dark-header-color-hover: var(--dark-hover-color);
 
-    --dark-main-bg: #292f33;
+    --dark-main-bg: #333;
 
     --dark-footer-color: #66757f;
     --dark-footer-color-hover: #7a8d99;
 
     --dark-card-bg: #00000085;
     --dark-card-color: var(--dark-text-color);
+
+    --dark-article-bg: var(--dark-header-bg);
+    --dark-article-color: var(--dark-text-color);
+    --dark-article-a-color: var(--dark-text-color);
+    --dark-article-a-hover-color: #0095ff;
 }
