Added post load logic
Util for on ready scripts in unic pages / routes

--- a/resources/assets/css/frontend/common/all.scss
+++ b/resources/assets/css/frontend/common/all.scss
@@ -5,6 +5,7 @@
 }
 
 @import "skins/default", "skins/dark", "header", "footer";
+@import "~owl.carousel";
 
 body, html, a {
     font-family: 'Roboto', sans-serif;
