--- a/resources/assets/css/frontend/common/footer.scss
+++ b/resources/assets/css/frontend/common/footer.scss
@@ -1,7 +1,7 @@
 footer {
 
     text-align: center;
-    padding: 102px 0 72px;
+    padding: 112px 0;
     color: var(--footer-color);
 
     .dark & {
