--- a/resources/assets/css/backend/common/all.scss
+++ b/resources/assets/css/backend/common/all.scss
@@ -1,3 +1,11 @@
+:root {
+    --text-color: #3f4254;
+    --body-bg-color: #f3f6f9;
+    --header-bg-color: #ffffff;
+
+    --primary-bg: #1bc5bd;
+}
+
 @media (min-width: 1200px) {
     :root {
         --fs: 15px;
@@ -6,10 +14,43 @@
 
 @import "header", "footer";
 
+body{
+    background-color: var(--body-bg-color);
+}
+
 body, html, a {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: var(--fs);
     text-decoration: none;
     outline: none;
     box-shadow: none;
+}
+
+.logo {
+    font-family: 'Lexend Exa', sans-serif;
+    font-weight: 400;
+    display: inline-flex;
+    margin-bottom: 0;
+    user-select: none;
+    cursor: pointer;
+    color: var(--header-color);
+    font-size: 14px;
+    text-align: left;
+
+    .dark & {
+        color: var(--dark-header-color);
+    }
+
+    span {
+        display: block;
+        font-size: 1em;
+        letter-spacing: 1px;
+        transition: 0.2s color linear;
+    }
+
+    span:first-child {
+        font-size: 2em;
+        line-height: 1em;
+        margin-right: 0.5em;
+    }
 }
