Just save progress.

--- a/resources/assets/css/backend.scss
+++ b/resources/assets/css/backend.scss
@@ -1,4 +1,5 @@
-@import "normalize",
+@import "~bootstrap/scss/bootstrap",
+"normalize",
 "../fontawesome/fontawesome",
 "../fontawesome/brands",
 "../fontawesome/regular",
