--- a/resources/assets/css/backend/common/media-library.scss
+++ b/resources/assets/css/backend/common/media-library.scss
@@ -1,5 +1,15 @@
 #media-library {
 
+    > div {
+        max-width: 100%;
+        height: 100%;
+        margin: 0;
+    }
+
+    .modal-content {
+        height: 100%;
+    }
+
     .nav-link {
         border: 1px solid var(--primary-bg);
         color: var(--primary-bg);
