--- a/resources/assets/css/backend/common/media-library.scss
+++ b/resources/assets/css/backend/common/media-library.scss
@@ -1,5 +1,17 @@
 #media-library {
 
+    span.error {
+        color: var(--bs-danger);
+        display: block;
+        margin-top: 10px;
+    }
+
+    span.success {
+        color: var(--bs-success);
+        display: block;
+        margin-top: 10px;
+    }
+
     > div {
         max-width: 100%;
         height: 100%;
@@ -104,6 +116,10 @@
             display: flex;
             margin: 0 -7px;
             padding-top: 10px;
+
+            &:empty {
+                padding-top: 0;
+            }
 
             .item {
                 flex: 0 0 calc(16.6% - 14px);
@@ -242,4 +258,130 @@
             }
         }
     }
+
+    .add_new {
+        display: none;
+
+        & + .library {
+            margin-top: 0;
+        }
+
+        &.open + .library {
+            margin-top: 15px;
+        }
+    }
+
+    .library {
+
+        img {
+            object-fit: cover;
+            width: 100%;
+            border-radius: 4px;
+        }
+
+        iframe, video {
+            border-radius: 4px;
+        }
+
+        .col-2 {
+            overflow: hidden;
+            min-height: 150px;
+            max-height: 150px;
+            margin-bottom: 30px;
+
+            &:hover > div > div {
+                opacity: 1;
+            }
+
+            > div {
+                height: 100%;
+                width: 100%;
+                position: relative;
+                display: flex;
+                flex-direction: revert;
+                align-items: center;
+                text-align: center;
+                background-color: #cacaca50;
+                border-radius: 4px;
+
+                * {
+                    opacity: 0.95;
+                    position: relative;
+                    z-index: 1;
+                }
+
+                > div {
+                    position: absolute;
+                    top: 0;
+                    opacity: 0;
+                    padding: 10px;
+                    background-color: rgb(0 106 98 / 94%);
+                    z-index: 2;
+                    border-radius: 4px;
+                    color: white;
+                    font-weight: 500;
+                    width: 100%;
+                    text-align: left;
+                    font-size: 13px;
+                    min-height: 72px;
+                    transition: 0.2s opacity;
+
+                    &.selected {
+                        opacity: 1;
+                        .btn i {
+                            display: inline-block;
+                        }
+                    }
+
+                    .btn {
+                        background: white;
+                        position: absolute;
+                        bottom: 10px;
+                        right: 10px;
+                        font-size: 13px;
+                        padding: 3px 6px;
+
+                        b {
+                            font-weight: 500;
+                        }
+
+                        i {
+                            font-size: 13px;
+                            display: none;
+                        }
+
+                    }
+
+                    span {
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        display: block;
+                        width: 100%;
+                    }
+
+                    i {
+                        font-size: 15px;
+                        margin-right: 5px;
+                    }
+
+                }
+
+            }
+
+        }
+
+    }
+
+    .selections {
+        display: none;
+    }
+
+    .add_new_button {
+        background-color: var(--primary-bg);
+        color: #fff;
+        font-weight: 500;
+        font-size: 13px;
+    }
+
 }
