- added custom builder override - post create and post update - added post content - added logic for reorder post content - added support to load saved Media in database - added cropper modal and cropper js - added provider for cookie - added unauthorized blade and logic for API and Backend auth routes - moved controller from api to folder Api

--- a/resources/assets/css/backend/dashboard.scss
+++ b/resources/assets/css/backend/dashboard.scss
@@ -1,6 +1,10 @@
 @import "~codemirror/lib/codemirror.css";
 @import "~codemirror/theme/night.css";
-@import "~cropperjs/dist/cropper.min.css";
+@import "./common/cropper";
+
+label:empty {
+    display: none;
+}
 
 :root {
     --main-padding: 40px;
@@ -171,6 +175,21 @@ body > .block li[data-module], .overflow .block li[data-module] {
 
     .CodeMirror-wrap {
         border-radius: 5px;
+    }
+
+    .media-result {
+        > div img {
+            width: 100%;
+        }
+        .controls {
+            margin-top: 15px;
+            input, button {
+                width: 100%;
+            }
+            button i {
+                margin-right: 5px;
+            }
+        }
     }
 
 
