--- a/resources/assets/css/backend/common/cropper.scss
+++ b/resources/assets/css/backend/common/cropper.scss
@@ -1,13 +1,47 @@
 #cropper-modal {
     .target .cropper-wrapper {
 
+        display: flex;
+        flex-wrap: wrap;
+
         .cropper {
-            resize: both;
             overflow: hidden;
+            border: 1px dashed #ddd;
+            border-radius: 3px;
         }
 
-        img {
+        .cropper-information {
+            width: calc(100% - 450px);
+            padding: 0 30px;
+            input {
+                outline: none;
+                padding-left: 5px;
+                width: auto;
+                position: relative;
+                top: -5px;
+                left: 5px;
+                user-select: none;
+            }
+            p {
+                display: flex;
+            }
+        }
+
+        h5 {
             width: 100%;
+            flex-grow: 1;
+            margin: 25px 0 20px;
+        }
+
+        .result {
+            width: 100%;
+            max-width: 100%;
+            border: 1px dashed #ddd !important;
+            border-radius: 5px;
+            img {
+                border: 1px solid #ddd !important;
+                border-radius: 5px;
+            }
         }
     }
 }
